<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JunglerActivity!</string>
    <string name="app_name">Jungler</string>
    <string name="jungle_timer">Jungle Timer</string>
    <string name="start">Start Game Timer!</string>
    <string name="wolves">Wolves</string>
    <string name="wraiths">Wraiths</string>
    <string name="golems">Golems</string>
    <string name="red_buff">Red Buff</string>
    <string name="blue_buff">Blue Buff</string>
    <string name="baron">Baron Nashor</string>
    <string name="dragon">Dragon</string>
    <string name="ally">Ally</string>
    <string name="enemy">Enemy</string>
    <string name="clock">00:00</string>
    <string name="empty"></string>
    <string name="screen_forever">Prevent Screen From Turning Off</string>
    <string name="vib">Disable Vibrations</string>
    <string name="music">Disable Music</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="reset_timers">Reset Timers</string>

</resources>