<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purpleback"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:keepScreenOn="true"
    xmlns:myapp="http://schemas.android.com/apk/res/lol.jungler_free">
    
    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        myapp:backgroundColor="#000000"
        myapp:primaryTextColor="#FFFFFF"
        myapp:secondaryTextColor="#5F5F5F"
        myapp:refreshInterval="30" 
        ads:adSize="BANNER"
        ads:adUnitId="a1505280cc7e146"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="center_horizontal|center_vertical" >

        <Button
            android:id="@+id/Button1"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:background="@drawable/button"
            android:clickable="true"
            android:hapticFeedbackEnabled="true"
            android:text="@string/enemy"
            android:textColor="#FF0000"
            android:textSize="30.0dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50.0dp"
            android:text="@string/clock"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FF0000"
            android:textSize="30.0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="30.0dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="64.0sp"
            android:layout_height="64.0sp"
            android:background="@drawable/enemywolf"
            android:clickable="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="15.0dp"
            android:text="@string/wolves"
            android:textColor="@android:color/white"
            android:textSize="30.0sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30.0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="30.0dp" >

        <Button
            android:id="@+id/button2"
            android:layout_width="64.0sp"
            android:layout_height="64.0sp"
            android:background="@drawable/enemywraith"
            android:clickable="true" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:paddingLeft="15.0dp"
    android:text="@string/wraiths"
    android:textColor="@android:color/white"
    android:textSize="30.0sp" />

<TextView
    android:id="@+id/textView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/empty"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textSize="30.0sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="30.0dp" >

        <Button
            android:id="@+id/button3"
            android:layout_width="64.0sp"
            android:layout_height="64.0sp"
            android:background="@drawable/enemygolem"
            android:clickable="true" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="15.0dp"
            android:text="@string/golems"
            android:textColor="@android:color/white"
            android:textSize="30.0sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30.0sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="30.0dp" >

        <Button
            android:id="@+id/button4"
            android:layout_width="64.0sp"
            android:layout_height="64.0sp"
            android:background="@drawable/enemybluebuff"
            android:clickable="true" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:paddingLeft="15.0dp"
    android:text="@string/blue_buff"
    android:textColor="@android:color/white"
    android:textSize="30.0sp" />

<TextView
    android:id="@+id/textView11"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/empty"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textSize="30.0sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="30.0dp" >

        <Button
            android:id="@+id/button5"
            android:layout_width="64.0sp"
            android:layout_height="64.0sp"
            android:background="@drawable/enemyredbuff"
            android:clickable="true" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="15.0dp"
            android:text="@string/red_buff"
            android:textColor="@android:color/white"
            android:textSize="30.0sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30.0sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="30.0dp" >

        <Button
            android:id="@+id/button6"
            android:layout_width="64.0sp"
            android:layout_height="64.0sp"
            android:background="@drawable/baron"
            android:clickable="true" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="15.0dp"
            android:text="@string/baron"
            android:textColor="@android:color/white"
            android:textSize="30.0sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30.0sp" />

    </LinearLayout>

</LinearLayout>